--- a/acts/index.html
+++ b/acts/index.html
@@ -132,7 +132,7 @@
                 with a specific goal of continuing with hands-on experiments with audio signal processing.</p>
 
 
-<h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300)</h3>
+<h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and M714)</h3>
 
             <p>Jul 4, '22, 
                 <b>Cunshi Wang</b> (Chinese Academy of Sciences), 
@@ -180,9 +180,8 @@
                 <div id="16" class="toshow" style="display:none">
                     <li><a href="21-22/Notes_Yi_20220808.pdf" target="_blank">Notes</a></li>
                     <li>Gunnar Carlsson, Afra Zomorodian, <a href="https://doi.org/10.1007/s00454-009-9176-0" target="_blank">The theory of multidimensional persistence</a></li>
-                    <li>Zomorodian Afra; Carlsson Gunnar, <a href="https://link.springer.com/article/10.1007/s00454-004-1146-y" target="_blank">Computing Persistent Homology</a></li>
+                    <li>Afra Zomorodian, Gunnar Carlsson, <a href="https://link.springer.com/article/10.1007/s00454-004-1146-y" target="_blank">Computing persistent homology</a></li>
                     <li>Wanying Bi, Jingyan Li, Jian Liu, Jie Wu, <a href="https://arxiv.org/abs/2205.10796" target="_blank">On the Cayley-persistence algebra</a></li>
-   
                 </div>
             </p>
 
