--- a/acts/index.html
+++ b/acts/index.html
@@ -204,7 +204,7 @@
             </p>
 
             <p>Aug 29, '22, 
-                <b>Meng Yu</b> (Tecent AI Lab), 
+                <b><a href="https://scholar.google.com/citations?user=pxFJcEEAAAAJ&hl=en" target="_blank">Meng Yu</a></b> (Tecent AI Lab), 
                 <a onclick="toggle_visibility('19');">
                     <i>TBA</i></a><br />
                 <div id="18" class="toshow" style="display:none">
