--- a/acts/index.html
+++ b/acts/index.html
@@ -206,7 +206,7 @@
             <p>Aug 29, '22, 
                 <b><a href="https://scholar.google.com/citations?user=pxFJcEEAAAAJ&hl=en" target="_blank">Meng Yu</a></b> (Tecent AI Lab), 
                 <a onclick="toggle_visibility('19');">
-                    <i>TBA</i></a><br />
+                    <i>Introduction to speech signal</i></a><br />
                 <div id="18" class="toshow" style="display:none">
                     
                 </div>
