--- a/acts/index.html
+++ b/acts/index.html
@@ -169,7 +169,7 @@
                     <i>Interleaving distances and multiplicative structures of persistent objects</i></a><br />
                 <div id="15" class="toshow" style="display:none">
                     <li>Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a></li>
-                    <li><a href="21-22/rxb.pdf" target="_blank">Notes</a></li>
+                    <!--<li><a href="21-22/rxb.pdf" target="_blank">Notes</a></li>-->
                 </div>
             </p>
 
@@ -198,7 +198,7 @@
                 <b>Siheng Yi</b>, 
                 <a onclick="toggle_visibility('18');">
                     <i>Multi-parameter persistence, cont'd</i></a><br />
-                <div id="17" class="toshow" style="display:none">
+                <div id="18" class="toshow" style="display:none">
                     <li><a href="21-22/Notes_Yi_20220815.pdf" target="_blank">Notes</a></li>
                 </div>
             </p>
@@ -207,7 +207,7 @@
                 <b><a href="https://scholar.google.com/citations?user=pxFJcEEAAAAJ&hl=en" target="_blank">Meng Yu</a></b> (Tecent AI Lab), 
                 <a onclick="toggle_visibility('19');">
                     <i>Introduction to speech signal</i></a><br />
-                <div id="18" class="toshow" style="display:none">
+                <div id="19" class="toshow" style="display:none">
                     
                 </div>
             </p>
