--- a/acts/index.html
+++ b/acts/index.html
@@ -168,8 +168,8 @@
                 <a onclick="toggle_visibility('15');">
                     <i>Interleaving distances and multiplicative structures of persistent objects</i></a><br />
                 <div id="15" class="toshow" style="display:none">
-                    <li>Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a></li>
-                    <!--<li><a href="21-22/rxb.pdf" target="_blank">Notes</a></li>-->
+                    Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a>
+                    
                 </div>
             </p>
 
