--- a/acts/index.html
+++ b/acts/index.html
@@ -208,7 +208,8 @@
                 <a onclick="toggle_visibility('19');">
                     <i>Introduction to speech signal</i></a><br />
                 <div id="19" class="toshow" style="display:none">
-                    
+                    <li><a href="21-22/Slides_Yu_20220829.pdf" target="_blank">Slides</a></li>
+                    <li><a href="https://github.com/MontrealCorpusTools/Montreal-Forced-Aligner" target="_blank">Phone alignment utility</a></li>
                 </div>
             </p>
 
