--- a/acts/index.html
+++ b/acts/index.html
@@ -190,7 +190,7 @@
                 <a onclick="toggle_visibility('17');">
                     <i>A &ldquo;digression&rdquo;: periodic video data</i></a><br />
                 <div id="17" class="toshow" style="display:none">
-                    
+                    <li><a href="21-22/Slides_Yi_20220825.pdf" target="_blank">Post-meeting slides</a></li>
                 </div>
             </p>
 
