--- a/acts/index.html
+++ b/acts/index.html
@@ -132,6 +132,19 @@
                 with a specific goal of continuing with hands-on experiments with audio signal processing.</p>
 
 
+<h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and Room TBA)</h3>
+
+            <p>Sep 5, '22, 
+                 
+                <a onclick="toggle_visibility('20');">
+                    <i>Progress report on topological analysis of video and speech data</i></a><br />
+                <div id="20" class="toshow" style="display:none">
+                    
+                </div>
+            </p>
+
+
+
 <h3><a id="T"></a>Talks in Summer 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and M714)</h3>
 
             <p>Jul 4, '22, 
