--- a/acts/index.html
+++ b/acts/index.html
@@ -132,7 +132,7 @@
                 with a specific goal of continuing with hands-on experiments with audio signal processing.</p>
 
 
-<h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and Room TBA)</h3>
+<h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and room TBA)</h3>
 
             <p>Sep 5, '22, 
                  
