--- a/acts/index.html
+++ b/acts/index.html
@@ -129,7 +129,9 @@
             <p>This is a continuation of last year's <a href="20-21" title="" target="_blank">seminar</a>, though we 
                 try to make it self-contained by starting mildly with overview and background materials.
                 Our focus is the theory and applications of topological methods in analyzing time-dependent data, 
-                with a specific goal of continuing with hands-on experiments with audio signal processing.</p>
+                with a specific goal of continuing with hands-on 
+                <a href="https://github.com/tda-for-vowels-and-consonants" target="_blank">experiments</a> with audio signal processing.</p>
+
 
 
 <h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and room TBA)</h3>
