--- a/acts/index.html
+++ b/acts/index.html
@@ -230,7 +230,7 @@
 
     
 
-<h3>Talks in Spring 2022 (mostly Mondays 8&ndash;10 in Tencent Meeting 730-7782-4255)</h3>
+<h3><a id="22spr">Talks in Spring 2022 (mostly Mondays 8&ndash;10 in Tencent Meeting 730-7782-4255)</h3>
 
             <p>Mar 14, '22, 
                 <b>Siheng Yi</b>, 
