--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -124,7 +124,18 @@
 
 <h3><a id="A"></a>About</h3>
 
-            <p>This is an undergraduate student seminar on geometry and topology.  This semester, we will be working from Bott and Tu's 
+            <p>This is an undergraduate student seminar on geometry and topology.  
+               This semester, our theme will be modular forms and their applications to geometry and topology.  
+               To begin with, in order to equip ourselves with the basic notions and theory of modular forms, 
+               we will be working mostly algebraically and analytically from Serre's  
+               <a href="https://link.springer.com/book/10.1007/978-1-4684-9884-4" target="_blank">A course in arithmetic</a>.  
+               But here are some motivations with geometric flavors (and beyond) for you to skim through and keep in mind.  
+               <li>Viazovska and collaborators' work on sphere packings: 
+                   discrete geometry + linear algebra + Lie groups + harmonic analysis + modular forms</br>
+                    <a href="https://doi.org/10.1090/noti1474" target="_blank">
+                        Award-winning expository paper</a></br>
+                    <a href="https://yifeizhu.github.io/theses/undergrad/liujz.pdf" target="_blank">An undergrad thesis / reading report</li>
+              we will be working from Bott and Tu's 
                 <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology</a>, 
                 with supplementary materials from participants of the Physics Department as well as from 
                 <a href="https://arxiv.org/abs/2109.12250" target="_blank">Differential cohomology: 
