--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -125,8 +125,8 @@
 <h3><a id="A"></a>About</h3>
 
             <p>This is an undergraduate student seminar on geometry and topology.  
-               This semester, our theme will be modular forms and their applications to geometry and topology.  
-               To begin with, in order to equip ourselves with the basic notions and theory of modular forms, 
+               This semester, our main theme will be modular forms and their applications to geometry and topology.  
+               To begin with, in order to equip ourselves with basic notions and examples of modular forms, 
                we will be working mostly algebraically and analytically from Serre's  
                <a href="https://link.springer.com/book/10.1007/978-1-4684-9884-4" target="_blank">A course in arithmetic</a>.  
                But here are some motivations with geometric flavors (and beyond) for you to skim through and keep in mind.  
@@ -134,7 +134,13 @@
                    discrete geometry + linear algebra + Lie groups + harmonic analysis + modular forms</br>
                     <a href="https://doi.org/10.1090/noti1474" target="_blank">
                         Award-winning expository paper</a></br>
-                    <a href="https://yifeizhu.github.io/theses/undergrad/liujz.pdf" target="_blank">An undergrad thesis / reading report</li>
+                    <a href="https://yifeizhu.github.io/theses/undergrad/liujz.pdf" target="_blank">An undergrad thesis / reading report</a></li>
+        <li>Bringmann and collaborators' work on manifolds with group actions and relations between modular forms:</br>
+    <a href="https://doi.org/10.1093/imrn/rnab172" target="_blank">Research paper</a></br>
+    <a href="https://yifeizhu.github.io/theses/undergrad/liaowb.pdf" target="_blank">An undergrad thesis / reading report</li>
+        <li>Pollack's recent expository<a href="https://doi.org/10.1090/noti2226" target="_blank">paper</a> on automorphic forms and exceptional Lie groups, 
+            with basics of modular forms</li>
+    <li>Nagloo's recent expository<a href="https://doi.org/10.1090/noti2221" target="_blank">paper</a>on model theory and differential equations, with modular forms as examples</li>
               we will be working from Bott and Tu's 
                 <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology</a>, 
                 with supplementary materials from participants of the Physics Department as well as from 
