--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -137,11 +137,14 @@
                     <a href="https://yifeizhu.github.io/theses/undergrad/liujz.pdf" target="_blank">An undergrad thesis / reading report</a></li>
         <li>Bringmann and collaborators' work on manifolds with group actions and relations between modular forms:</br>
     <a href="https://doi.org/10.1093/imrn/rnab172" target="_blank">Research paper</a></br>
-    <a href="https://yifeizhu.github.io/theses/undergrad/liaowb.pdf" target="_blank">An undergrad thesis / reading report</li>
-        <li>Pollack's recent expository<a href="https://doi.org/10.1090/noti2226" target="_blank">paper</a> on automorphic forms and exceptional Lie groups, 
-            with basics of modular forms</li>
-    <li>Nagloo's recent expository<a href="https://doi.org/10.1090/noti2221" target="_blank">paper</a>on model theory and differential equations, with modular forms as examples</li>
-              we will be working from Bott and Tu's 
+    <a href="https://yifeizhu.github.io/theses/undergrad/liaowb.pdf" target="_blank">An undergrad thesis / reading report</a></li>
+        <li>Pollack's recent expository <a href="https://doi.org/10.1090/noti2226" target="_blank">paper</a> on automorphic forms and exceptional Lie groups, 
+            starting with basics of modular forms</li>
+    <li>Nagloo's recent expository<a href="https://doi.org/10.1090/noti2221" target="_blank">paper</a>on model theory and differential equations, featuring modular forms as examples</li>
+<li>One more<a href="https://www.quantamagazine.org/mathematicians-chase-moonshine-string-theory-connections-20150312/" target="_blank">article</a>
+and its <a href="https://www.quantamagazine.org/moonshine-link-discovered-for-pariah-symmetries-20170922/" target="_blank">sequel</a> reaching out to 
+representation theory and mathematical physics</li>       
+we will be working from Bott and Tu's 
                 <a href="https://link.springer.com/book/10.1007/978-1-4757-3951-0" target="_blank">Differential forms in algebraic topology</a>, 
                 with supplementary materials from participants of the Physics Department as well as from 
                 <a href="https://arxiv.org/abs/2109.12250" target="_blank">Differential cohomology: 
