--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -277,9 +277,11 @@
             <div class="row">
                 <div class="col-full">
                     <div class="s-footer__copyright">
-                        <span>© Copyright Philosophy 2021</span> 
+                        <span>© Copyright Philosophy 2022</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
-                        <span>Picture from Loring W. Tu, <a href="https://celebratio.org/Bott_R/article/727/" target="_blank">Remembering Raoul Bott</a></span>
+                        <span>Picture from a screenshot of the 
+                            <a href="https://wstein.org/Tables/fundomain/" target="_blank">Fundamental Domain drawer</a>
+                        originally made available by <a href="https://warwick.ac.uk/fac/sci/maths/people/staff/helena_verrill/" target="_blank">Helena Verrill</a></span>
                     </div>
 
                     <div class="go-top">
