--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -175,7 +175,7 @@
     <h3><a id="T"></a>Talks</h3>
     
     <p>Sep 8 '21, 
-        <b>Rongming Yin</b>, 
+        <b>Rongming Yin and Kaicheng Dong</b>, 
         <i>Introduction; algebraic methods</i>
     </p>
  <!--       
