--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -149,7 +149,7 @@
         <li>One more 
             <a href="https://www.quantamagazine.org/mathematicians-chase-moonshine-string-theory-connections-20150312/" target="_blank">article</a> 
             and its <a href="https://www.quantamagazine.org/moonshine-link-discovered-for-pariah-symmetries-20170922/" target="_blank">sequel</a>, 
-            reaching out to representation theory and mathematical physics</li>
+            reaching out to representation theory and mathematical physics</li></br>
 
         Here are some further references in company with Serre's and where we are heading later per interests of participants: 
 
