--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -154,7 +154,7 @@
         Here are some further references in company with Serre's and where we are heading later per interests of participants: 
 
         <li>Zagier's <a href="https://link.springer.com/book/10.1007/978-3-540-74119-0" target="_blank">part 1</a> in the 1-2-3 of modular forms 
-            is a good point of entry</li>
+            is a good point of entry (signed copy available in the Library)</li>
 
         <li>Stein's <a href="https://bookstore.ams.org/gsm-79/" target="_blank">computational approach</a> highlights examples with SageMath 
             (available on author's website)</li>
