--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -163,9 +163,9 @@
             combine analytic (Riemann surfaces) and algebro-geometric aspects of moduli spaces</li>
 
         <li>Cox's <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781118400722" target="_blank">book</a> 
-            aims towards class field theory, with historical background</li>
+            aims towards class field theory, with historical background</li></br>
 
-        We meet on Thursdays 4:20&ndash;6:10 pm.  The exact room will be updated here.</p>
+        We meet on Thursdays 4:20&ndash;6:10 pm.  The exact room will be updated here soon.</p>
 
     <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
         Note that this semester, due to the nature of the topics, 
