--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -62,7 +62,9 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
-                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
+                         <li><a href="#A" title="">About</a></li>
+                        <li><a href="#T" title="">Talks</a></li>
+                        <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
     <li><a href="https://sustech-topology.github.io/acts/#22spr" title="" target="_blank">Spring 2022</a></li>
     <li><a href="21fal" title="" target="_blank">Fall 2021</a></li>
     <li><a href="21spr" title="" target="_blank">Spring 2021</a></li>
