--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -177,7 +177,7 @@
     <h3><a id="T"></a>Talks</h3>
     
     <p>Sep 8 '21, 
-        <b>Rongming Yin and Kaicheng Dong</b>, 
+        <b>Kaicheng Dong and Rongming Yin</b>, 
         <i>Introduction; algebraic methods</i>
     </p>
  <!--       
