--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -167,14 +167,12 @@
         <li>Cox's <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781118400722" target="_blank">book</a> 
             aims towards class field theory, with historical background</li></br>
 
-        We meet on Thursdays 4:20&ndash;6:10 pm.  The exact room will be updated here soon.</p>
-
     <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
         Note that this semester, due to the nature of the topics, 
         you may not need topology or differential geometry as a prerequisite to understand the material to be covered per se.  
         On the other hand, you may lack a certain amount of intuition/motivation from such experiences as we move on.</p>
 
-    <h3><a id="T"></a>Talks</h3>
+    <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Yidan 307)</h3>
     
     <p>Sep 8 '21, 
         <b>Kaicheng Dong and Rongming Yin</b>, 
