--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -158,7 +158,7 @@
         <li>Zagier's <a href="https://link.springer.com/book/10.1007/978-3-540-74119-0" target="_blank">part 1</a> in the 1-2-3 of modular forms 
             is a good point of entry (signed copy available in the Library)</li>
 
-        <li>Stein's <a href="https://bookstore.ams.org/gsm-79/" target="_blank">computational approach</a> highlights examples with SageMath 
+        <li>W. Stein's <a href="https://bookstore.ams.org/gsm-79/" target="_blank">computational approach</a> highlights examples with SageMath 
             (available on author's website)</li>
 
         <li>Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> 
