--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -175,7 +175,7 @@
     <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Yidan 307)</h3>
     
     <p>Sep 8 '21, 
-        <b>Kaicheng Dong and Rongming Yin</b>, 
+        <b>Kaicheng Dong</b>, 
         <i>Introduction; algebraic methods</i>
     </p>
  <!--       
