--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -280,7 +280,7 @@
                         <span>© Copyright Philosophy 2022</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
                         <span>Picture from a screenshot of the 
-                            <a href="https://wstein.org/Tables/fundomain/" target="_blank">Fundamental Domain drawer</a>
+                            <a href="https://wstein.org/Tables/fundomain/" target="_blank">Fundamental Domain Drawer</a>
                         originally made available by <a href="https://warwick.ac.uk/fac/sci/maths/people/staff/helena_verrill/" target="_blank">Helena Verrill</a></span>
                     </div>
 
