--- a/acts/index.html
+++ b/acts/index.html
@@ -141,7 +141,7 @@
                 <a onclick="toggle_visibility('20');">
                     <i>Progress report on topological analysis of video and speech data</i></a><br />
                 <div id="20" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Yi_Slide</a></li>
+                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Yi_Slides</a></li>
                     <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Feng_Slides</a></li>
                 </div>
             </p>
