--- a/acts/index.html
+++ b/acts/index.html
@@ -137,12 +137,12 @@
 <h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and room TBA)</h3>
 
             <p>Sep 5, '22, 
-                 
+               <b>Siheng Yi and Pingyao Feng</b>  
                 <a onclick="toggle_visibility('20');">
                     <i>Progress report on topological analysis of video and speech data</i></a><br />
                 <div id="20" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Yi_Slides</a></li>
-                    <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Feng_Slides</a></li>
+                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Video: periodicity detection</a></li>
+                    <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Speech: feature extraction</a></li>
                 </div>
             </p>
 
