--- a/acts/index.html
+++ b/acts/index.html
@@ -136,13 +136,25 @@
 
 <h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and room TBA)</h3>
 
-            <p>Sep 5, '22, 
-               <b>Siheng Yi and Pingyao Feng</b>  
+            <p>Sep 5, '22 (M714), 
+               <b>Siheng Yi and Pingyao Feng</b>, 
                 <a onclick="toggle_visibility('20');">
                     <i>Progress report on topological analysis of video and speech data</i></a><br />
                 <div id="20" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Video: periodicity detection</a></li>
-                    <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Speech: feature extraction</a></li>
+                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Slides on periodicity detection for video data</a></li>
+                    <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Slides on feature extraction for speech data</a></li>
+                </div>
+            </p>
+
+            <p>TBD, '22, 
+               <b>Zhiwang Yu</b>  
+                <a onclick="toggle_visibility('21');">
+                    <i>Topological construction of neural network architectures and its applications</i></a><br />
+                <div id="21" class="toshow" style="display:none">
+                    <li>Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, Gunnar Carlsson, 
+                        <a href="https://arxiv.org/abs/2101.05778" target="_blank">Topological deep learning</a></li>
+                    <li>Gunnar Carlsson, Rickard Brüel Gabrielsson, 
+                        <a href="https://link.springer.com/chapter/10.1007/978-3-030-43408-3_5" target="_blank">Topological approaches to deep learning</a></li>
                 </div>
             </p>
 
