--- a/acts/index.html
+++ b/acts/index.html
@@ -141,8 +141,8 @@
                 <a onclick="toggle_visibility('20');">
                     <i>Progress report on topological analysis of video and speech data</i></a><br />
                 <div id="20" class="toshow" style="display:none">
-                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Slides on periodicity detection for video data</a></li>
-                    <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Slides on feature extraction for speech data</a></li>
+                    <li><a href="21-22/Slides_Yi_20220905.pdf" target="_blank">Slides</a> on periodicity detection for video data</li>
+                    <li><a href="21-22/Slides_Feng_20220905.pdf" target="_blank">Slides</a> on feature extraction for speech data</li>
                 </div>
             </p>
 
