--- a/acts/index.html
+++ b/acts/index.html
@@ -147,7 +147,7 @@
             </p>
 
             <p>TBD, '22, 
-               <b>Zhiwang Yu</b>  
+               <b>Zhiwang Yu</b>, 
                 <a onclick="toggle_visibility('21');">
                     <i>Topological construction of neural network architectures and its applications</i></a><br />
                 <div id="21" class="toshow" style="display:none">
