--- a/acts/index.html
+++ b/acts/index.html
@@ -134,7 +134,7 @@
 
 
 
-<h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 510-6344-5300 and room TBA)</h3>
+<h3><a id="T"></a>Talks in Fall 2022 (mostly Mondays 2&ndash;4 in Tencent Meeting 817-5229-3070 and M2001)</h3>
 
             <p>Sep 5, '22 (M714), 
                <b>Siheng Yi and Pingyao Feng</b>, 
