--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -174,11 +174,17 @@
 
     <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Yidan 307)</h3>
     
-    <p>Sep 8 '21, 
+    <p>Sep 8 '22, 
         <b>Kaicheng Dong</b>, 
         <i>Introduction; algebraic methods</i>
         <a href="22fal/Number theorem and modular forms 2022.9.8 Kaicheng Dong.pdf" target="_blank">notes</a>
     </p>
+
+    <p>Sep 15 '22, 
+        <b>Rongming Yin</b>, 
+        <i>Introduction to p-adic fields and Hasse principle</i>
+    </p>
+
  <!--       
     <p>Sep 13, '21, 
         <b>Yunsheng Li</b>, 
