--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -174,15 +174,20 @@
 
     <h3><a id="T"></a>Talks (Thursdays 4:20–6:10 in Yidan 307)</h3>
     
-    <p>Sep 8 '22, 
+    <p>Sep 8, '22, 
         <b>Kaicheng Dong</b>, 
         <i>Introduction; algebraic methods</i>
         <a href="22fal/Number theorem and modular forms 2022.9.8 Kaicheng Dong.pdf" target="_blank">notes</a>
     </p>
 
-    <p>Sep 15 '22, 
+    <p>Sep 15, '22, 
         <b>Rongming Yin</b>, 
-        <i>Introduction to p-adic fields and Hasse principle</i>
+        <a onclick="toggle_visibility('3');">
+                    <i>Introduction to p-adic fields and Hasse principle, II</i></a><br />
+        <div id="3" class="toshow" style="display:none">
+                    <li>KEITH CONRAD, <a href="https://kconrad.math.uconn.edu/blurbs/gradnumthy/selmerexample.pdf" target="_blank">Selmer's example</a></li>
+                    <li>J.W.S. Cassels, <a href="https://doi.org/10.1112/jlms/s1-41.1.193" target="_blank">"Diophantine equations with special reference to elliptic curves" J. London Math. Soc., 41 (1966) pp. 193–291</a></li>
+        </div>
     </p>
 
  <!--       
