--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     
 <h3>Talks in Fall 2022 </h3>
 
-            <p>Sep 16, '22 (Colloquium, Friday, 16:30&ndash;17:30 , Tencent Meeting ID: 865-807-509), 
+            <p>Sep 16, '22 (Friday, 16:30&ndash;17:30 , Tencent Meeting ID: 865-807-509), 
                 <b><a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=883874" target="_blank">Jian Liu</a></b> (Hebei Normal University), 
                 <a onclick="toggle_visibility('9');">
                     <i>On the Cayley-persistence algebra</i></a><br />
