--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -177,7 +177,7 @@
     <p>Sep 8, '22, 
         <b>Kaicheng Dong</b>, 
         <i>Introduction; algebraic methods</i>
-        <a href="22fal/Number theorem and modular forms 2022.9.8 Kaicheng Dong.pdf" target="_blank">notes</a>
+        <a href="22fal/Number theory and modular forms 2022.9.8 Kaicheng Dong.pdf" target="_blank">notes</a>
     </p>
 
     <p>Sep 15, '22, 
