--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -188,7 +188,7 @@
     <p>Sep 15, '22, 
         <b>Rongming Yin</b>, 
         <a onclick="toggle_visibility('2');">
-                    <i>Introduction to p-adic fields and Hasse principle</i></a><br />
+                    <i>Introduction to p-adic fields and the Hasse principle</i></a><br />
         <div id="2" class="toshow" style="display:none">
                     <li>Keith Conrad, <a href="https://kconrad.math.uconn.edu/blurbs/gradnumthy/selmerexample.pdf" target="_blank">Selmer's example</a></li>
                     <li>J. W. S. Cassels, <a href="https://doi.org/10.1112/jlms/s1-41.1.193" target="_blank">Diophantine equations with special reference to elliptic curves</a></li>
