--- a/acts/index.html
+++ b/acts/index.html
@@ -196,7 +196,9 @@
                 <a onclick="toggle_visibility('15');">
                     <i>Interleaving distances and multiplicative structures of persistent objects</i></a><br />
                 <div id="15" class="toshow" style="display:none">
-                    Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a>
+                    <li>Grégory Ginot, Johan Leray, <a href="https://arxiv.org/abs/1905.12307" target="_blank">Multiplicative persistent distances</a>
+                    <li><a href="21-22/Notes_Ruan_20220801.pdf" target="_blank">Notes</a></li>
+                    <li><a href="21-22/Thesis_Ruan.pdf" target="_blank">Thesis for master 1</a></li>
                     
                 </div>
             </p>
