--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <h3>Talks in Fall 2022 </h3>
             
             <p>Sep 23, '22 (Wednesday, 11:00&ndash;12:00 , Tencent Meeting ID: 865-807-509), 
-                <b><a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=883874" target="_blank">Xiang Liu</a></b> (Nankai University), 
+                <b><a href="https://" target="_blank">Xiang Liu</a></b> (Nankai University), 
                 <a onclick="toggle_visibility('10');">
                     <i>Persistent function based machine learning for drug design</i></a><br />
                 <div id="10" class="toshow" style="display:none">
