--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -164,7 +164,7 @@
         <li>Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> 
             combine analytic (Riemann surfaces) and algebro-geometric aspects of moduli spaces</li>
 
-        <li>Cox's <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781118400722" target="_blank">book</a> 
+        <li>Cox's <a href="https://bookstore.ams.org/chel-387/" target="_blank">book</a> 
             aims towards class field theory, with historical background</li></br>
 
     <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
