--- a/past/index.html
+++ b/past/index.html
@@ -21,8 +21,8 @@
 
     <!-- script
     ================================================== -->
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
+    <script src="/js/modernizr.js"></script>
+    <script src="/js/pace.min.js"></script>
 <script type="text/javascript">
 <!--
     function toggle_visibility(id) {
@@ -328,9 +328,9 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
