--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </p>
 
             <p>Sep 23, '22 (Wednesday, 11:00&ndash;12:00, Tencent Meeting ID: 865-807-509), 
-                <b><a href="https://" target="_blank">Xiang Liu</a></b> (Nankai University), 
+                <b>Xiang Liu</b> (Nankai University), 
                 <a onclick="toggle_visibility('2');">
                     <i>Persistent function based machine learning for drug design</i></a><br />
                 <div id="2" class="toshow" style="display:none">
