--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <h3>Talks in Fall 2022 </h3>
 
             <p>Sep 16, '22 (Friday, 16:30&ndash;17:30, Tencent Meeting ID: 865-807-509), 
-                <b><a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=883874" target="_blank">Jian Liu</a></b> (Hebei Normal University), 
+                <b>Jian Liu</b> (Hebei Normal University), 
                 <a onclick="toggle_visibility('1');">
                     <i>On the Cayley-persistence algebra</i></a><br />
                 <div id="1" class="toshow" style="display:none">
