--- a/grad/index.html
+++ b/grad/index.html
@@ -128,7 +128,7 @@
                Topics are selected from common interests of the participants.</p>
 
 
-<h3><a href="#F22" title="">Talks in Fall 2022 (mostly Tuesdays 4:30–5:30)</a></h3>
+<h3><a href="#F22" title="">Talks in Fall 2022 (Tuesdays 4:30–5:30)</a></h3>
 
 
 
