--- a/past/index.html
+++ b/past/index.html
@@ -15,15 +15,15 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <!-- script
     ================================================== -->
     <script src="/js/modernizr.js"></script>
     <script src="/js/pace.min.js"></script>
-<script type="/text/javascript">
+    <script type="/text/javascript">
 <!--
     function toggle_visibility(id) {
        var e = document.getElementById(id);
