--- a/grad/index.html
+++ b/grad/index.html
@@ -122,17 +122,17 @@
 <article class="row format-standard">
 
 
-<h3><a id="A"></a>About</h3>
+<h3>About</h3>
 
-            <p>This is a graduate-level seminar on algebraic and geometric topology.  
-               Topics are selected from common interests of the participants.</p>
+    <p>This is a graduate-level seminar on algebraic and geometric topology.  Topics are selected from common interests of the participants.</p>
+
+    
+
+<h3><a id="#F22"></a>Talks in Fall 2022 (Tuesdays 4:30–5:30)</h3>
 
 
-<h3><a href="#F22" title=""></a>Talks in Fall 2022 (Tuesdays 4:30–5:30)</h3>
 
-
-
-<h3><a href="#S22" title=""></a>Talks in Summer 2022</h3>
+<h3><a id="#S22"></a>Talks in Summer 2022</h3>
     
     <p>Jul 25, '22 (2:30–3:30, M2002), 
         <b>Xuecai Ma</b>, 
