--- a/grad/index.html
+++ b/grad/index.html
@@ -158,7 +158,7 @@
 
         
         
-<h3><a href="#S21" title=""></a>Talks in Spring 2021 (mostly Mondays 4:30&ndash;5:30 in Yidan 307)</h3>
+<h3><a id="#S21"></a>Talks in Spring 2021 (mostly Mondays 4:30&ndash;5:30 in Yidan 307)</h3>
 
 
         <p>Apr 19, '21, 
