--- a/past/index.html
+++ b/past/index.html
@@ -121,7 +121,7 @@
 <article class="row format-standard">
 
     
-<h3><a id="#F21"></a>Talks in Fall 2021 (mostly Mondays 4:20&ndash;5:10, zoom: 846 6434 3534)</h3>
+<h3><a id="F21"></a>Talks in Fall 2021 (mostly Mondays 4:20&ndash;5:10, zoom: 846 6434 3534)</h3>
 
             <p>Oct 22, '21 (Colloquium, Friday, 9:00&ndash;10:00 am, zoom: 976 6122 0179, passcode: 645744), 
                 <b><a href="https://sites.google.com/view/xuzhouli/home" target="_blank">Zhouli Xu</a></b> (University of California, San Diego), 
