--- a/grad/index.html
+++ b/grad/index.html
@@ -63,8 +63,8 @@
                     <ul class="header__nav">
                         <li><a  href="/index.html" title="" target="_blank">Home</a></li>
                         <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
-                        <li><a href="#S22" title="">Summer 2022</a></li>
-                        <li><a href="#S21" title="">Spring 2021</a></li>
+                        <li><a href="#S22">Summer 2022</a></li>
+                        <li><a href="#S21">Spring 2021</a></li>
                         
     
                     </ul> 
