--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     
 <h3>Talks in Fall 2022 </h3>
 
-            <p>Sep 16, '22 (Friday, 16:30&ndash;17:30, Tencent Meeting ID: 865-807-509), 
+            <p>Sep 19, '22 (Monday, 16:30&ndash;17:30, Tencent Meeting ID: 865-807-509), 
                 <b>Jian Liu</b> (Hebei Normal University), 
                 <a onclick="toggle_visibility('1');">
                     <i>On the Cayley-persistence algebra</i></a><br />
@@ -137,7 +137,7 @@
                 </div>
             </p>
 
-            <p>Sep 23, '19 (Monday, 16:30&ndash;17:30, Tencent Meeting ID: 865-807-509), 
+            <p>Sep 16, '22 (Firday, 16:30&ndash;17:30, Tencent Meeting ID: 865-807-509), 
                 <b>Xiang Liu</b> (Nankai University), 
                 <a onclick="toggle_visibility('2');">
                     <i>Persistent function based machine learning for drug design</i></a><br />
