--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                 <a onclick="toggle_visibility('2');">
                     <i>Persistent function based machine learning for drug design</i></a><br />
                 <div id="2" class="toshow" style="display:none">
+                    
+                    <li><a href="slides/XiangLiu.pdf" target="_blank">Slides</a> on persistent function based machine learning for drug design</li>
+                                        
                     Artificial intelligence (AI) based drug design has demonstrated great potential to fundamentally change the pharmaceutical industries. 
                     However, a key issue in all AI-based drug design models is efficient molecular representation and featurization. 
                     Recently,topological data analysis (TDA) has been used for molecular representations and its combination with machine learning models 
