--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                 <a onclick="toggle_visibility('1');">
                     <i>On the Cayley-persistence algebra</i></a><br />
                 <div id="1" class="toshow" style="display:none">
+                    
+                    <li><a href="slides/JianLiu.pdf" target="_blank">Slides</a> on the Cayley-persistence algebra</li>
+                    
                     In this talk, we introduce a persistent (co)homology theory for Cayley digraph grading. We give the algebraic 
                     structures of Cayleypersistence object. Specifically, we consider the module structure of persistent (co)homology 
                     and show the decomposition of a finitely generated Cayleypersistence module. Moreover, we introduce the persistence-cup 
