--- a/grad/index.html
+++ b/grad/index.html
@@ -128,7 +128,12 @@
 
     
 
-<h3>Talks in Fall 2022 (Tuesdays 4:30–5:30)</h3>
+<h3>Talks in Fall 2022</h3>
+
+    <p>Sep 20, '22 (4–6, M5024), 
+        <b>Jiacheng Liang</b>, 
+        <i>Elliptic curves and abelian varieties</i>
+    </p>
 
 
 
