--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -131,8 +131,9 @@
         To begin with, in order to equip ourselves with basic notions and examples of modular forms, 
         we will be working mostly algebraically and analytically from Serre's 
         <a href="https://link.springer.com/book/10.1007/978-1-4684-9884-4" target="_blank"><i>A course in arithmetic</i></a>.  
-        But here are some motivations with geometric flavors (and beyond) just for you to skim through and keep in mind.  
-        
+        But <a onclick="toggle_visibility('m');">here</a> are some motivations with geometric flavors (and beyond) just for you to skim through and 
+        keep in mind.  
+        <div id="m" class="toshow" style="display:none">
         <li>Viazovska and collaborators' work on sphere packings: 
             discrete geometry + linear algebra + Lie groups + harmonic analysis + modular forms</br>
             <a href="https://doi.org/10.1090/noti1474" target="_blank">Award-winning expository paper</a></br>
@@ -152,9 +153,10 @@
             <a href="https://www.quantamagazine.org/mathematicians-chase-moonshine-string-theory-connections-20150312/" target="_blank">article</a> 
             and its <a href="https://www.quantamagazine.org/moonshine-link-discovered-for-pariah-symmetries-20170922/" target="_blank">sequel</a>, 
             reaching out to representation theory and mathematical physics</li></br>
-
-        Here are some further references in company with Serre's and where we are heading later per interests of participants: 
-
+        </div>
+        <a onclick="toggle_visibility('r');">Here</a> are some further references in company with Serre's and where we are heading later per 
+        interests of participants: 
+        <div id="r" class="toshow" style="display:none">
         <li>Zagier's <a href="https://link.springer.com/book/10.1007/978-3-540-74119-0" target="_blank">part 1</a> in the 1-2-3 of modular forms 
             is a good point of entry (signed copy available in the Library)</li>
 
@@ -166,8 +168,8 @@
 
         <li>Cox's <a href="https://bookstore.ams.org/chel-387/" target="_blank">book</a> 
             aims towards class field theory, with historical background</li></br>
-
-    <p><a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
+        </div>
+        <a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
         Note that this semester, due to the nature of the topics, 
         you may not need topology or differential geometry as a prerequisite to understand the material to be covered per se.  
         On the other hand, you may lack a certain amount of intuition/motivation from such experiences as we move on.</p>
