--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -197,6 +197,11 @@
         </div>
     </p>
 
+    <p>Sep 22, '22, 
+        <b>Rongming Yin</b>, 
+                    <i>Introduction to p-adic fields and the Hasse principle, cont'd</i></a><br />        
+    </p>
+
 
 
 <br /><br /><br />
