--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -155,7 +155,7 @@
             reaching out to representation theory and mathematical physics</li></br>
         </div>
         <a onclick="toggle_visibility('r');">Here</a> are some further references in company with Serre's and where we are heading later per 
-        interests of participants: 
+        interests of participants. 
         <div id="r" class="toshow" style="display:none">
         <li>Zagier's <a href="https://link.springer.com/book/10.1007/978-3-540-74119-0" target="_blank">part 1</a> in the 1-2-3 of modular forms 
             is a good point of entry (signed copy available in the Library)</li>
@@ -169,6 +169,7 @@
         <li>Cox's <a href="https://bookstore.ams.org/chel-387/" target="_blank">book</a> 
             aims towards class field theory, with historical background</li></br>
         </div>
+</p><p>
         <a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
         Note that this semester, due to the nature of the topics, 
         you may not need topology or differential geometry as a prerequisite to understand the material to be covered per se.  
