--- a/acts/index.html
+++ b/acts/index.html
@@ -146,15 +146,22 @@
                 </div>
             </p>
 
-            <p>TBD, '22, 
+            <p>Sep 19, '22, 
+               <b>Siheng Yi, Qingrui Qu, and Pingyao Feng</b>, 
+                    <i>Progress report on topological analysis of video and speech data</i></a><br />
+            </p>
+
+            <p>Sep 26, '22, 
                <b>Zhiwang Yu</b>, 
                 <a onclick="toggle_visibility('21');">
                     <i>Topological construction of neural network architectures and its applications</i></a><br />
                 <div id="21" class="toshow" style="display:none">
-                    <li>Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, Gunnar Carlsson, 
-                        <a href="https://arxiv.org/abs/2101.05778" target="_blank">Topological deep learning</a></li>
                     <li>Gunnar Carlsson, Rickard Brüel Gabrielsson, 
                         <a href="https://link.springer.com/chapter/10.1007/978-3-030-43408-3_5" target="_blank">Topological approaches to deep learning</a></li>
+                    <li>Gunnar Carlsson, Tigran Ishkhanov, Vin de Silva, Afra Zomorodian, 
+                        <a href="https://link.springer.com/article/10.1007/s11263-007-0056-x" target="_blank">On the local behavior of spaces of natural images</a></li>
+                    <li>Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, Gunnar Carlsson, 
+                        <a href="https://arxiv.org/abs/2101.05778" target="_blank">Topological deep learning</a></li>
                 </div>
             </p>
 
