--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -152,8 +152,9 @@
         <li>One more 
             <a href="https://www.quantamagazine.org/mathematicians-chase-moonshine-string-theory-connections-20150312/" target="_blank">article</a> 
             and its <a href="https://www.quantamagazine.org/moonshine-link-discovered-for-pariah-symmetries-20170922/" target="_blank">sequel</a>, 
-            reaching out to representation theory and mathematical physics</li></br>
+            reaching out to representation theory and mathematical physics</li>
         </div>
+</p><p>
         <a onclick="toggle_visibility('r');">Here</a> are some further references in company with Serre's and where we are heading later per 
         interests of participants. 
         <div id="r" class="toshow" style="display:none">
@@ -167,7 +168,7 @@
             combine analytic (Riemann surfaces) and algebro-geometric aspects of moduli spaces</li>
 
         <li>Cox's <a href="https://bookstore.ams.org/chel-387/" target="_blank">book</a> 
-            aims towards class field theory, with historical background</li></br>
+            aims towards class field theory, with historical background</li>
         </div>
 </p><p>
         <a href="/undergrad/GT-student-seminar.pdf" target="_blank">Here</a> is a course description if you wish to register for credit.  
