--- a/index.html
+++ b/index.html
@@ -164,6 +164,22 @@
                     <li><a href="slides/XiangLiu.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
+    
+            <p>Sep 26, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
+                <b>Xing Gu</b> (Westlake University), 
+                <a onclick="toggle_visibility('3');">
+                    <i>The Ordinary and Motivic Cohomology of BPGL_n(C)</i></a><br />
+                <div id="3" class="toshow" style="display:none">
+                    
+                    <li>For an algebraic group G over \mathbb{C}, we have the classifying space BG in the sense of Totaro and Voevodsky, 
+                        which is an object in the unstable motivic homotopy category that plays a similar role in algebraic geometry as 
+                        the classifying space of a Lie group in topology. The motivic cohomology (in particular, the Chow ring) of BG is 
+                        closely related, via the cycle map, to the singular cohomology of the topological realization of BG, which is the 
+                        classifying space of G(\mathbb{C}), the underlying Lie group of the complex algebraic group G. In this talk we present 
+                        a work which exploits the above connection between topological and motivic theory and yields new results on both the 
+                        ordinary and the motivic cohomology of the complex projective linear group.</li>
+                </div>
+            </p>
 
 
 
