--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <i>The Ordinary and Motivic Cohomology of BPGL_n(C)</i></a><br />
                 <div id="3" class="toshow" style="display:none">
                     
-                    <li>For an algebraic group G over \mathbb{C}, we have the classifying space BG in the sense of Totaro and Voevodsky, 
+                    <li>For an algebraic group G over $\mathbb{C}$, we have the classifying space BG in the sense of Totaro and Voevodsky, 
                         which is an object in the unstable motivic homotopy category that plays a similar role in algebraic geometry as 
                         the classifying space of a Lie group in topology. The motivic cohomology (in particular, the Chow ring) of BG is 
                         closely related, via the cycle map, to the singular cohomology of the topological realization of BG, which is the 
