--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <p>Sep 26, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
                 <b>Xing Gu</b> (Westlake University), 
                 <a onclick="toggle_visibility('3');">
-                    <i>The Ordinary and Motivic Cohomology of BPGL_n(C)</i></a><br />
+                    <i>The Ordinary and Motivic Cohomology of <div styple={{lineHeight:'12px'}}>BPGL<sub>n</sub>(C)</i></a><br />
                 <div id="3" class="toshow" style="display:none">
                     
                     <li>For an algebraic group G over <div styple={{lineHeight:'12px'}}>G<sub>n</sub>
