--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p>Sep 26, '22 (Monday, 16:20–17:20, Tencent Meeting 402-5413-1062), 
                 <b>Xing Gu</b> (Westlake University), 
                 <a onclick="toggle_visibility('3');">
-                    <i>The Ordinary and Motivic Cohomology of <div styple={{lineHeight:'12px'}}>BPGL<sub>n</sub>(C)</i></a><br />
+                    <i>The Ordinary and Motivic Cohomology of BPGL<sub>n</sub>(C)</a><br />
                 <div id="3" class="toshow" style="display:none">
                     <li>For an algebraic group G over the field C of complex numbers, we have the classifying space BG in the sense of Totaro and Voevodsky, 
                         which is an object in the unstable motivic homotopy category that plays a similar role in algebraic geometry as 
